[BridgeCard] Fix parameter layout issue (#1816)
Fixes parameter layout issue on small screens.

--- a/static/style.css
+++ b/static/style.css
@@ -360,7 +360,7 @@ h5 {
 		margin: 3px auto 0;
 	}
 
-	.info {
+	.info, .no-info {
 		display: none;
 	}
 
